--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-todo",
+  "name": "crypt0r",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,14 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "@types/react-router-dom": "^5.3.3",
-    "framer-motion": "^12.23.12",
-    "i18next": "^25.3.2",
-    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-i18next": "^15.6.1",
-    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
@@ -38,8 +32,9 @@
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
   },
-  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "description": "Crypt0r — SPA на Vite/React: шифрование/расшифровка паролем (PBKDF2 + HMAC-поток) с визуализацией пайплайна.",
   "main": "eslint.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "homepage": "https://kweekov.github.io/Crypt0r/"
 }
