fix(build): limit node tsconfig includes; strict onChange; enable composite

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,5 +14,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
-  }
+  },
+  "include": [
+    "vite.config.ts",
+    "eslint.config.js"
+  ]
 }
